# mnemon

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  USAGE.md
docs/design/: 01-vision.md  02-philosophy.md  03-concepts.md  04-graph-model.md  05-pipelines.md  06-lifecycle.md  07-integration.md  08-decisions.md
docs/diagrams/: 01-system-architecture.drawio  02-remember-pipeline.drawio  03-smart-recall-pipeline.drawio  04-magma-four-graph.drawio  05-llm-supervised.drawio  06-lifecycle-retention.drawio  07-diff-dedup-pipeline.drawio  08-three-layer-integration.drawio  09-insight-edge-datamodel.drawio  11-two-layer-architecture.drawio  llm-supervised-concept.drawio
scripts/: e2e_agent_test.sh  e2e_test.sh  visualize_graph.py
src/mnemon/: __init__.py  cli.py  model.py
src/mnemon/embed/: ollama.py  vector.py
src/mnemon/graph/: bfs.py  causal.py  engine.py  entity.py  semantic.py  temporal.py
src/mnemon/search/: diff.py  intent.py  keyword.py  quality.py  recall.py
src/mnemon/setup/: claude.py  detect.py  markdown.py  openclaw.py  prompt.py  settings.py
src/mnemon/store/: db.py  (+3 more)
tests/: conftest.py  test_cli.py  test_embed.py  test_graph_causal.py  test_graph_entity.py  test_graph_integration.py  test_model.py  test_search_diff.py  test_search_intent.py  test_search_keyword.py  test_search_quality.py  test_search_recall.py  test_setup.py  test_store.py
tests/fixtures/: ollama.py
(+12 files in other folders)
