[tool.poetry]
name = "mnemon"
version = "0.6.0"
description = "Persistent memory for LLM agents"
authors = ["mnemon-dev"]
license = "MIT"
readme = "README.md"
packages = [{include = "mnemon", from = "src"}]
include = ["src/mnemon/setup/assets/**/*"]

[tool.poetry.scripts]
mnemon = "mnemon.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
testcontainers = {version = "^4.10", extras = ["ollama"]}
matplotlib = "^3.8"
networkx = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
